--- a/NBAPlayers/Base.lproj/Main.storyboard
+++ b/NBAPlayers/Base.lproj/Main.storyboard
@@ -1,17 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="6LQ-78-SI7">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="m95-vq-OUs">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Navigation Controller-->
+        <!--Tab Bar Controller-->
+        <scene sceneID="Bop-kQ-lTn">
+            <objects>
+                <tabBarController id="m95-vq-OUs" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dej-EA-jtH">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="6LQ-78-SI7" kind="relationship" relationship="viewControllers" id="oRN-gg-Bwb"/>
+                        <segue destination="qba-ba-JBs" kind="relationship" relationship="viewControllers" id="a6D-wL-Wix"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="g33-Yn-Ra4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1600" y="424"/>
+        </scene>
+        <!--Games-->
+        <scene sceneID="9yq-fK-jTs">
+            <objects>
+                <viewController id="qba-ba-JBs" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="k5X-3f-YYv">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="0ap-1C-hAh"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Games" image="ticket" catalog="system" id="4W5-4T-qex"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1qA-g4-LZt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-784" y="779"/>
+        </scene>
+        <!--Players-->
         <scene sceneID="cI8-Yc-Vxm">
             <objects>
                 <navigationController id="6LQ-78-SI7" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Players" image="person" catalog="system" id="moC-Ww-xQw"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="n1p-8R-3ZF">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -33,14 +69,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="rWc-Qd-J1L">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PlayerCell" textLabel="cyt-uj-WGr" detailTextLabel="7aw-cq-S03" style="IBUITableViewCellStyleSubtitle" id="nIT-rL-IFA">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PlayerCell" textLabel="cyt-uj-WGr" detailTextLabel="7aw-cq-S03" style="IBUITableViewCellStyleSubtitle" id="nIT-rL-IFA">
                                         <rect key="frame" x="0.0" y="55.5" width="414" height="55.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nIT-rL-IFA" id="4TG-ti-tpp">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="55.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="383" height="55.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="cyt-uj-WGr">
@@ -66,17 +102,46 @@
                                     <outlet property="delegate" destination="0dh-pi-aVE" id="ink-q2-MRs"/>
                                 </connections>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Network error" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zk0-lt-1hW">
+                                <rect key="frame" x="146.5" y="400.5" width="121" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" systemColor="systemRedColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kq2-f1-Xh4">
+                                <rect key="frame" x="198" y="440.5" width="18" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" image="arrow.clockwise" catalog="system"/>
+                                <connections>
+                                    <action selector="onReloadButtonTap:" destination="0dh-pi-aVE" eventType="touchUpInside" id="c8Q-QK-4oK"/>
+                                </connections>
+                            </button>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="HBm-wH-xlk">
+                                <rect key="frame" x="197" y="440.5" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ocI-xa-peg"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="ocI-xa-peg" firstAttribute="bottom" secondItem="rWc-Qd-J1L" secondAttribute="bottom" id="3Mx-am-9HI"/>
+                            <constraint firstItem="Zk0-lt-1hW" firstAttribute="centerX" secondItem="HBm-wH-xlk" secondAttribute="centerX" id="43I-VR-YFk"/>
+                            <constraint firstItem="Kq2-f1-Xh4" firstAttribute="centerX" secondItem="Zk0-lt-1hW" secondAttribute="centerX" id="51c-SP-i0g"/>
+                            <constraint firstItem="HBm-wH-xlk" firstAttribute="top" secondItem="Zk0-lt-1hW" secondAttribute="bottom" constant="16" id="ECu-JR-cQb"/>
+                            <constraint firstItem="Kq2-f1-Xh4" firstAttribute="top" secondItem="Zk0-lt-1hW" secondAttribute="bottom" constant="16" id="JPK-LD-6bd"/>
+                            <constraint firstItem="HBm-wH-xlk" firstAttribute="centerY" secondItem="ocI-xa-peg" secondAttribute="centerY" id="KxN-NI-dG8"/>
                             <constraint firstItem="ocI-xa-peg" firstAttribute="trailing" secondItem="rWc-Qd-J1L" secondAttribute="trailing" id="QpL-RH-gWO"/>
                             <constraint firstItem="rWc-Qd-J1L" firstAttribute="top" secondItem="ocI-xa-peg" secondAttribute="top" id="VWG-lo-cia"/>
+                            <constraint firstItem="HBm-wH-xlk" firstAttribute="centerX" secondItem="ocI-xa-peg" secondAttribute="centerX" id="hIB-ey-GrE"/>
                             <constraint firstItem="rWc-Qd-J1L" firstAttribute="leading" secondItem="ocI-xa-peg" secondAttribute="leading" id="xBO-IQ-dZW"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="9Vu-07-lNJ"/>
+                    <connections>
+                        <outlet property="activityIndicatorView" destination="HBm-wH-xlk" id="Kew-A0-mbk"/>
+                        <outlet property="errorLabel" destination="Zk0-lt-1hW" id="P79-tp-tLw"/>
+                        <outlet property="reloadButton" destination="Kq2-f1-Xh4" id="Eah-ON-OtO"/>
+                        <outlet property="tableView" destination="rWc-Qd-J1L" id="BOd-b1-0r7"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xFT-pw-W1h" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -156,26 +221,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eol-YF-VU2">
-                                <rect key="frame" x="16" y="64" width="35" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7s8-NR-nZN">
+                                <rect key="frame" x="16" y="66" width="28" height="23.5"/>
+                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <imageReference key="image" image="location.fill" catalog="system" symbolScale="small"/>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Conference:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Inf-QS-kyk">
-                                <rect key="frame" x="16" y="105" width="94" height="21"/>
+                                <rect key="frame" x="16" y="104.5" width="94" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Miami" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4C8-Dq-nIM">
-                                <rect key="frame" x="352" y="64.5" width="46" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Miami" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4C8-Dq-nIM">
+                                <rect key="frame" x="48" y="67" width="51" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="West" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gRl-bH-box">
-                                <rect key="frame" x="359" y="105" width="39" height="21"/>
+                                <rect key="frame" x="359" y="104.5" width="39" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -185,13 +249,13 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="gRl-bH-box" firstAttribute="centerY" secondItem="Inf-QS-kyk" secondAttribute="centerY" id="0Fy-xw-lqJ"/>
+                            <constraint firstItem="Inf-QS-kyk" firstAttribute="top" secondItem="4C8-Dq-nIM" secondAttribute="bottom" constant="20" id="3L6-cd-mNf"/>
                             <constraint firstItem="Inf-QS-kyk" firstAttribute="leading" secondItem="DnN-Lj-4Vy" secondAttribute="leading" constant="16" id="Dji-Hx-ufy"/>
-                            <constraint firstItem="4C8-Dq-nIM" firstAttribute="centerY" secondItem="Eol-YF-VU2" secondAttribute="centerY" id="IGl-D4-wDA"/>
                             <constraint firstItem="DnN-Lj-4Vy" firstAttribute="trailing" secondItem="gRl-bH-box" secondAttribute="trailing" constant="16" id="Ifx-Zs-yrp"/>
-                            <constraint firstItem="DnN-Lj-4Vy" firstAttribute="trailing" secondItem="4C8-Dq-nIM" secondAttribute="trailing" constant="16" id="MRK-aR-18G"/>
-                            <constraint firstItem="Eol-YF-VU2" firstAttribute="top" secondItem="DnN-Lj-4Vy" secondAttribute="top" constant="20" id="ZQl-eK-LRi"/>
-                            <constraint firstItem="Inf-QS-kyk" firstAttribute="top" secondItem="Eol-YF-VU2" secondAttribute="bottom" constant="20" id="apf-gK-WEl"/>
-                            <constraint firstItem="Eol-YF-VU2" firstAttribute="leading" secondItem="DnN-Lj-4Vy" secondAttribute="leading" constant="16" id="hcL-gE-wWD"/>
+                            <constraint firstItem="7s8-NR-nZN" firstAttribute="leading" secondItem="DnN-Lj-4Vy" secondAttribute="leading" constant="16" id="Kjv-mh-qMi"/>
+                            <constraint firstItem="4C8-Dq-nIM" firstAttribute="centerY" secondItem="7s8-NR-nZN" secondAttribute="centerY" id="dN5-qh-bEn"/>
+                            <constraint firstItem="4C8-Dq-nIM" firstAttribute="leading" secondItem="7s8-NR-nZN" secondAttribute="trailing" constant="8" id="sB0-al-Efu"/>
+                            <constraint firstItem="7s8-NR-nZN" firstAttribute="top" secondItem="DnN-Lj-4Vy" secondAttribute="top" constant="20" id="u7f-dF-xA5"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="HQM-2c-jPm"/>
@@ -206,8 +270,15 @@
         </scene>
     </scenes>
     <resources>
+        <image name="arrow.clockwise" catalog="system" width="115" height="128"/>
+        <image name="location.fill" catalog="system" width="128" height="121"/>
+        <image name="person" catalog="system" width="128" height="117"/>
+        <image name="ticket" catalog="system" width="128" height="84"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
