--- a/NBAPlayers/Base.lproj/Main.storyboard
+++ b/NBAPlayers/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -114,7 +115,7 @@
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4D9-Od-tyb" userLabel="homeScore">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4D9-Od-tyb" userLabel="homeScore">
                                                             <rect key="frame" x="92" y="38.5" width="39.5" height="23"/>
                                                             <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="19"/>
                                                             <nil key="textColor"/>
@@ -151,7 +152,7 @@
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2lq-Nk-FYo" userLabel="awayScore">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2lq-Nk-FYo" userLabel="awayScore">
                                                             <rect key="frame" x="212" y="38.5" width="39.5" height="23"/>
                                                             <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="19"/>
                                                             <nil key="textColor"/>
@@ -505,7 +506,7 @@
             <objects>
                 <navigationController id="6LQ-78-SI7" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Players" id="moC-Ww-xQw">
-                        <imageReference key="image" image="person.3" catalog="system" symbolScale="large"/>
+                        <imageReference key="image" image="person" catalog="system" symbolScale="large"/>
                     </tabBarItem>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="n1p-8R-3ZF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="96"/>
@@ -662,10 +663,63 @@
                     <view key="view" contentMode="scaleToFill" id="E2a-sf-fqg">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="rNp-xv-4ll">
+                                <rect key="frame" x="16" y="44" width="343" height="574"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ggz-gB-qyf">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TeamCell" id="AP8-yy-L7i" customClass="TeamCollectionViewCell" customModule="NBAPlayers" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="erO-8q-6hP">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qc3-SB-Zgf">
+                                                    <rect key="frame" x="20" y="20" width="60" height="60"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="60" id="3sy-If-kBy"/>
+                                                        <constraint firstAttribute="height" constant="60" id="uQt-3m-22V"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="qc3-SB-Zgf" secondAttribute="bottom" constant="20" id="7EB-aM-Ye0"/>
+                                                <constraint firstAttribute="trailing" secondItem="qc3-SB-Zgf" secondAttribute="trailing" constant="20" id="ZyI-Tn-nC6"/>
+                                                <constraint firstItem="qc3-SB-Zgf" firstAttribute="leading" secondItem="erO-8q-6hP" secondAttribute="leading" constant="20" id="czI-Z3-ELC"/>
+                                                <constraint firstItem="qc3-SB-Zgf" firstAttribute="top" secondItem="erO-8q-6hP" secondAttribute="top" constant="20" id="nwb-ae-wmS"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <connections>
+                                            <outlet property="teamLogoImageView" destination="qc3-SB-Zgf" id="bDQ-Gq-7IN"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="dIx-mZ-YKz" id="G3m-rf-aKm"/>
+                                    <outlet property="delegate" destination="dIx-mZ-YKz" id="itG-aW-0f6"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="M6Z-IX-sfe"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="rNp-xv-4ll" firstAttribute="leading" secondItem="M6Z-IX-sfe" secondAttribute="leading" constant="16" id="Hsg-UN-RkX"/>
+                            <constraint firstItem="M6Z-IX-sfe" firstAttribute="trailing" secondItem="rNp-xv-4ll" secondAttribute="trailing" constant="16" id="Xbh-PO-kQu"/>
+                            <constraint firstItem="rNp-xv-4ll" firstAttribute="top" secondItem="M6Z-IX-sfe" secondAttribute="top" id="Xhu-0V-Ymx"/>
+                            <constraint firstItem="M6Z-IX-sfe" firstAttribute="bottom" secondItem="rNp-xv-4ll" secondAttribute="bottom" id="eL8-SQ-Emq"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="EFp-Zv-AWq"/>
+                    <connections>
+                        <outlet property="collectionView" destination="rNp-xv-4ll" id="KZ2-rq-jf5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SPh-hT-QbY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
